# ac6_curtains

./: .gitignore  README.md  dirs.py  requirements.txt  setup.cfg
ac6_curtains/: ac6.py
all_sky_imagers/: asi_grid.pro  download_themis_asi.py  find_curtain_passes.py  plot_themis_asi.py  plot_themis_asi_ac6_pass.py  plot_themis_asi_movie.py  plot_themis_asi_pass.py  plot_themis_asi_single_frames.py  plot_themis_asi_sinlge_frames.py  png_2_movie.py  rego_skymap.pro  skyfield_azel_test.py  themis_asi_frames.py
data/: lat_lon_blc_flag.csv  lat_lon_mirror_alt.csv
detect/: append_ae.py  baseline_method_sensitivity.py  baseline_threshold.py  calculate_curtain_width.py  correlate_detect.py  detect_daily.py  detect_loop.py  merge_10hz_data.py
fig_scripts/: ae_width_stats.py  blc_map_examples.py  north_pole_map.py  plot_curtains.py  plot_example_curtains.py  topographic_prominence.py
misc/: orbital_velocity.py  parallel_potential.ipynb  remove_duplicate_curtains.py
paper/: shumko_ac6_curtain_stats.aux  shumko_ac6_curtain_stats.bbl  shumko_ac6_curtain_stats.blg  shumko_ac6_curtain_stats.fdb_latexmk  shumko_ac6_curtain_stats.fls  shumko_ac6_curtain_stats.tex
rbsp_conjunctions/: find_conjunctions.py
reports/: 20191205_ac6_curtains_in_blc.pptx  20191206_ac6_curtains_in_blc.pptx  20200129_shumko_curtains.pptx  20200305_shumko_curtains.pptx  2020227_shumko_curtains.pptx  2020_shumko_agu_q&a.pptx  2020_shumko_agu_slides.pptx
stats/: ac6_lag_dist_10hz.py  amplitude_evolution.py  blc_curtain_search.py  blc_flag.py  compare_ae.py  cross_calibrate.py  curtain_ae.py  dirs.py  (+21 more)
(+90 files in other folders)
