# More info here https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name = ac6_curtains
version = 0.1.0
url='https://github.com/mshumko/ac6_curtains'
author='Mykhaylo Shumko'
author_email='msshumko@gmail.com'
long_description = file: README.md
license = GNU GENERAL PUBLIC LICENSE

[options]
packages = find:
install_requires = 
    numpy
    matplotlib
    pandas
    cartopy
    aurora-asi-lib
    scipy
    cdflib
python_requires = >= "3.8"